--- a/angular.json
+++ b/angular.json
@@ -29,8 +29,7 @@
             ],
             "styles": [
               "./node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.scss",
-              "./app/variables.scss"
+              "src/styles.scss"
             ],
             "scripts": []
           },
