--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@angular/animations": "~10.1.0",
     "@angular/cdk": "^10.2.0",
     "@angular/common": "~10.1.0",
-    "@angular/compiler": "~10.1.0",
+    "@angular/compiler": "^10.1.0",
     "@angular/core": "~10.1.0",
     "@angular/forms": "~10.1.0",
     "@angular/material": "^10.2.0",
@@ -30,10 +30,10 @@
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1001.0",
     "@angular/cli": "~10.1.0",
-    "@angular/compiler-cli": "~10.1.0",
-    "@types/node": "^14.6.3",
+    "@angular/compiler-cli": "^10.1.0",
     "@types/jasmine": "~3.5.0",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^14.6.3",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
