--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -5,8 +5,17 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.github.izdwuut</groupId>
-    <artifactId>pastebin</artifactId>
+    <artifactId>pastinator</artifactId>
     <version>0.1.0</version>
+
+    <repositories>
+        <repository>
+            <id>jboss</id>
+            <name>JBoss repository</name>
+            <url>http://repository.jboss.org/maven2</url>
+        </repository>
+    </repositories>
+
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -14,13 +23,6 @@
         <java.version>1.8</java.version>
         <org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
     </properties>
-
-<!--    <repositories>-->
-<!--        <repository>-->
-<!--            <id>spring-repo</id>-->
-<!--            <url>https://repo.spring.io/release</url>-->
-<!--        </repository>-->
-<!--    </repositories>-->
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -62,10 +64,28 @@
             <version>42.2.16</version>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.mapstruct</groupId>
             <artifactId>mapstruct</artifactId>
             <version>${org.mapstruct.version}</version>
+        </dependency>
+
+
+
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.4.21.Final</version>
+        </dependency>
+
+
+
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+            <version>5.2.8.RELEASE</version>
         </dependency>
     </dependencies>
     <build>
