--- a/backend/src/main/resources/application.properties.dist
+++ b/backend/src/main/resources/application.properties.dist
@@ -2,4 +2,4 @@
 spring.datasource.url=
 spring.datasource.username=
 spring.datasource.password=
-spring.datasource.driver-class-name=org.postgresql.Driver
+spring.datasource.driver-class-name=
