--- a/backend/src/main/resources/application.properties.dist
+++ b/backend/src/main/resources/application.properties.dist
@@ -1,5 +1,4 @@
-
-spring.datasource.url=
-spring.datasource.username=
-spring.datasource.password=
-spring.datasource.driver-class-name=
+spring.datasource.url =
+spring.datasource.username =
+spring.datasource.password =
+spring.datasource.driver-class-name = org.postgresql.Driver
