--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "~10.1.0",
     "@angular/platform-browser-dynamic": "~10.1.0",
     "@angular/router": "~10.1.0",
+    "@reactivex/rxjs": "^6.6.2",
     "moment": "^2.27.0",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
