Add copying logic to PasteComponent.

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "~10.1.0",
     "@reactivex/rxjs": "^6.6.2",
     "moment": "^2.27.0",
+    "ngx-copypaste": "^8.0.0",
+    "ngx-mask": "^10.0.1",
     "rxjs": "~6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.1"
