--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@angular/core": "~10.0.14",
     "@angular/forms": "~10.0.14",
     "@angular/material": "^10.2.1",
+    "@angular/material-moment-adapter": "^10.2.1",
     "@angular/platform-browser": "~10.0.14",
     "@angular/platform-browser-dynamic": "~10.0.14",
     "@angular/router": "~10.0.14",
